--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop.co</title>
+
+    <title>shop.co</title>
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
+    <header>
+        <div class="header-box">
+            <div class="logo">SHOP.CO</div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#home">Shop</a></li>
+                    <li><a href="#products">On Sale</a></li>
+                    <li><a href="#about">New Arrivals</a></li>
+                    <li><a href="#contact">Brands</a></li>
+                </ul>
+            </nav>
+
+            <div class="search-box">
+                <img src="/images/Frame.svg" alt="">
+                <input type="text" placeholder="Search for products...">
+            </div>
+
+            <div class="icons">
+            <a href="#shopping-cart"><i class="fa-regular fa-cart-shopping" style="color: #000000;"></i></a>
+            <a href="#user-account"><i class="fa-regular fa-circle-user" style="color: #000000;"></i></a>
+            </div>
+    </header>
+
     
 </body>
 </html>
