--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>shop.co</title>
+    <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
     <header>
@@ -15,20 +16,20 @@
             <div class="logo">SHOP.CO</div>
             <nav class="navigation">
                 <ul>
-                    <li><a href="#home">Shop</a></li>
-                    <li><a href="#products">On Sale</a></li>
-                    <li><a href="#about">New Arrivals</a></li>
-                    <li><a href="#contact">Brands</a></li>
+                    <li><a href="#shop">Shop</a></li>
+                    <li><a href="#on-sale">On Sale</a></li>
+                    <li><a href="#new-arrivals">New Arrivals</a></li>
+                    <li><a href="#brands">Brands</a></li>
                 </ul>
             </nav>
 
             <div class="search-box">
-                <img src="images/Frame.svg" alt="">
+                <img src="../images/Frame.svg" alt="">
                 <input type="text" placeholder="Search for products...">
             </div>
 
             <div class="icons">
-            <a href="#shopping-cart"><i class="fa-regular fa-cart-shopping" style="color: #000000;"></i></a>
+            <a href="#shopping-cart"><i class="fa-solid fa-cart-shopping"></i></a>
             <a href="#user-account"><i class="fa-regular fa-circle-user" style="color: #000000;"></i></a>
             </div>
     </header>
