--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
 
             <div class="search-box">
-                <img src="../images/Frame.svg" alt="">
+                <img src="images/Vector.png" alt="">
                 <input type="text" placeholder="Search for products...">
             </div>
 
