body 1 section done | build test

--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
             </div>
     </header>
 
+    <body class="body">
+        <div class="body-picture"><img src="images/body_picture.png" alt=""></div>
+        <div class="big-star"><img src="images/big_star.png" alt=""></div>
+        <div class="small-star"><img src="images/small_star.png" alt=""></div>
+        <div class="title-box">
+            <div class="title">FIND CLOTHES THAT MATCHES YOUR STYLE</div>
+            <div class="subtitle">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</div>
+        </div>
+        <div class="shop-now-button"><button>Shop Now</button></div>
+        <div class="info-box">
+            <div class="box">
+                <h3 class="number">200+</h3>
+                <p class="info">International Brands</p>
+            </div>
+            <div class="line-div"></div>
+            <div class="box">
+                <h3 class="number">2,000+</h3>
+                <p class="info">High-Quality Products</p>
+            </div>
+            <div class="line-div"></div>
+            <div class="box">
+                <h3 class="number">30,000+</h3>
+                <p class="info">Happy Customers</p>
+            </div>
+        </div>
+    </body>
+
     
 </body>
 </html>
