header fixed | build test

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 <p class="info">Happy Customers</p>
             </div>
         </div>
+
+        <div class="brands">
+            <img src="images/versace.png" alt="">
+            <img src="images/zara.png" alt="">
+            <img src="images/gucci.png" alt="">
+            <img src="images/prada.png" alt="">
+            <img src="images/calvin_klein.png" alt="">
+        </div>
     </body>
 
     
