animation + browse style + revisions | build test

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
     </header>
 
-    <main class="hero-section">
+    <section class="hero-section">
         <div class="body-image">
             <div class="body-picture"><img src="images/body_picture.png" alt="" class="hero-background"></div>
             <div class="big-star"><img src="images/big_star.png" alt=""></div>
@@ -62,7 +62,9 @@
                 </div>
             </div>
         </div>
-        
+    </section>
+
+    <section>
         <div class="brands">
             <img src="images/versace.png" alt="">
             <img src="images/zara.png" alt="">
@@ -70,7 +72,9 @@
             <img src="images/prada.png" alt="">
             <img src="images/calvin_klein.png" alt="">
         </div>
+    </section>
 
+    <section>
         <div class="new-arrivals-box">
             <div class="title-new-arrivals">NEW ARRIVALS</div>
             <div class="new-arrivals">
@@ -159,8 +163,11 @@
             <div class="view-all"><button>View All</button></div>
         </div>
 
+    </section>
+
         <div class="line2-div"></div>
 
+    <section>
         <div class="top-selling-box">
             <div class="title-top-selling">TOP SELLING</div>
             <div class="top-selling">
@@ -247,10 +254,91 @@
             <div class="view-all"><button>View All</button></div>
         </div>
 
+    </section>
+
+    <section>
         <div class="browse-by-dress-parent-box">
             <div class="browse-by-dress-title">BROWSE BY DRESS STYLE</div>
+            <div class="box-links">
+                <div class="casual-and-formal">
+                    <div class="casual"><a href="#casual.html"><img src="images/Casual.svg" alt=""></a></div>
+                    <div class="formal"><a href="#formal.html"><img src="images/Formal.svg" alt=""></a></div>
+                </div>
+                <div class="party-and-gym">
+                    <div class="party"><a href="#party.html"><img src="images/Party.svg" alt=""></a></div>
+                    <div class="gym"><a href="#gym.html"><img src="images/Gym.svg" alt=""></a></div>
+                </div>
+            </div>
         </div>
-    </main>
+    </section>
+
+    <section>
+        <div class="our-happy-customers">
+            <div class="title-and-arrows">
+                <div class="our-happy-customers-title">OUR HAPPY CUSTOMERS</div>
+                <div class="arrows">
+                    <a href="#left"><img src="images/arrow-left.svg" alt=""></a>
+                    <a href="#right"><img src="images/arrow-right.svg" alt=""></a>
+                </div>
+            </div>
+
+            <div class="revisions">
+                <div class="revision-box">
+                    <div class="revision-inside-box">
+                        <div class="stars">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                        </div>
+
+                        <div class="revision-box-name">
+                            <p class="revision-name">Sarah M.</p>
+                            <img src="images/green-tic.svg" alt="">
+                        </div>
+
+                        <div class="revision">"I'm blown away by the quality and style of the clothes I received from Shop.co. From casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</div>
+                    </div>
+                </div>
+                <div class="revision-box">
+                    <div class="revision-inside-box">
+                        <div class="stars">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                        </div>
+                        <div class="revision-box-name">
+                            <p class="revision-name">Alex K.</p>
+                            <img src="images/green-tic.svg" alt="">
+                        </div>
+
+                        <div class="revision">"Finding clothes that align with my personal style used to be a challenge until I discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and occasions.”</div>
+                    </div>
+                </div>
+                <div class="revision-box">
+                    <div class="revision-inside-box">
+                        <div class="stars">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                            <img src="images/Star_without_border.svg" alt="">
+                        </div>
+
+                        <div class="revision-box-name">
+                            <p class="revision-name">James L.</p>
+                            <img src="images/green-tic.svg" alt="">
+                        </div>
+
+                        <div class="revision">"As someone who's always on the lookout for unique fashion pieces, I'm thrilled to have stumbled upon Shop.co. The selection of clothes is not only diverse but also on-point with the latest trends.”</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     
 </body>
