footer first visual done | build test

--- a/index.html
+++ b/index.html
@@ -340,6 +340,81 @@
         </div>
     </section>
 
+    <section>
+        <div class="footer-bottom-box">
+            <div class="footer-top-box">
+                <div class="footer-top-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</div>
+                <div class="email-and-button">
+                    <div class="email-input">
+                        <input type="text" placeholder="Enter your email address">
+                    </div>
+                    <div class="subscribe-button"><button>Subscribe to Newsletter</button></div>
+                </div>
+            </div>
+            <div class="footer-first-box">
+                <div class="footer-title-box">
+                    <div class="footer-title">SHOP.CO</div>
+                    <div class="footer-subtitle">We have clothes that suits your style and which you're proud to wear. From women to men.</div>
+                    <div class="socials"><img src="images/socials.svg" alt=""></div>
+                </div>
+                <div class="footer-company-box">
+                    <div class="company-title">COMPANY</div>
+                    <div class="company-links">
+                        <a href="#about">About</a>
+                        <a href="#features">Features</a>
+                        <a href="#works">Works</a>
+                        <a href="#career">Career</a>
+                    </div>
+                </div>
+
+                <div class="footer-help-box">
+                    <div class="company-title">Help</div>
+                    <div class="company-links">
+                        <a href="#customers-support">Customer Support</a>
+                        <a href="#delivery-details">Delivery Details</a>
+                        <a href="#terms-and-conditions">Terms & Conditions</a>
+                        <a href="#privacy-policy">Privacy Policy</a>
+                    </div>
+                </div>
+
+                <div class="footer-faq-box">
+                    <div class="company-title">FAQ</div>
+                    <div class="company-links">
+                        <a href="#account">Account</a>
+                        <a href="#manage-deliveries">Manage Deliveries</a>
+                        <a href="#orders">Orders</a>
+                        <a href="#payments">Payments</a>
+                    </div>
+                </div>
+
+                <div class="footer-resources-box">
+                    <div class="company-title">Resources</div>
+                    <div class="company-links">
+                        <a href="#free-eBooks">Free eBooks</a>
+                        <a href="#development-tutorials">Development Tutorial</a>
+                        <a href="#how-to-blog">How to - Blog</a>
+                        <a href="#youtube-playlist">Youtube Playlist</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="line3-div"></div>
+
+            <div class="footer-second-box">
+
+                <div class="footer-rights">
+                    <div class="rights-text">Shop.co © 2000-2023, All Rights Reserved</div>
+                    <div class="payments-box">
+                        <img src="images/visa.svg" alt="">
+                        <img src="images/mastercard.svg" alt="">
+                        <img src="images/paypal.svg" alt="">
+                        <img src="images/applepay.svg" alt="">
+                        <img src="images/googlepay.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
