--- a/index.html
+++ b/index.html
@@ -75,90 +75,91 @@
     </section>
 
     <section>
-        <div class="new-arrivals-box">
-            <div class="title-new-arrivals">NEW ARRIVALS</div>
-            <div class="new-arrivals">
-                <div class="clothes-box">
-                    <img src="images/t_shirt.png" alt="">
-                    <div class="clothes-name">T-shirt with Tape Details</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/half_star.svg" alt="">
+        <div class="scroll-wrapper">
+            <div class="new-arrivals-box">
+                <div class="title-new-arrivals">NEW ARRIVALS</div>
+                <div class="new-arrivals">
+                    <div class="clothes-box">
+                        <img src="images/t_shirt.png" alt="">
+                        <div class="clothes-name">T-shirt with Tape Details</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/half_star.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>4.5/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>4.5/5</p>
-                        </div>
+                        <div class="clothes-price">$120</div>
                     </div>
-                    <div class="clothes-price">$120</div>
-                </div>
 
-                <div class="clothes-box">
-                    <img src="images/skiny_fit_jeans.png" alt="">
-                    <div class="clothes-name">Skinny Fit Jeans</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/half_star.svg" alt="">
+                    <div class="clothes-box">
+                        <img src="images/skiny_fit_jeans.png" alt="">
+                        <div class="clothes-name">Skinny Fit Jeans</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/half_star.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>3.5/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>3.5/5</p>
+                        <div class="prices">
+                            <div class="clothes-price">$240</div>
+                            <div class="old-price">$260</div>
+                            <div class="discount">-20%</div>
                         </div>
                     </div>
-                    <div class="prices">
-                        <div class="clothes-price">$240</div>
-                        <div class="old-price">$260</div>
-                        <div class="discount">-20%</div>
-                    </div>
-                </div>
 
-                <div class="clothes-box">
-                    <img src="images/checkered_shirt.png" alt="">
-                    <div class="clothes-name">Checkered Shirt</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/half_star.svg" alt="">
+                    <div class="clothes-box">
+                        <img src="images/checkered_shirt.png" alt="">
+                        <div class="clothes-name">Checkered Shirt</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/half_star.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>4.5/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>4.5/5</p>
-                        </div>
+                        <div class="clothes-price">$180</div>
                     </div>
-                    <div class="clothes-price">$180</div>
-                </div>
 
-                <div class="clothes-box">
-                    <img src="images/sleeve_striped_tshirt.png" alt="">
-                    <div class="clothes-name">Sleeve Striped T-shirt</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/half_star.svg" alt="">
+                    <div class="clothes-box">
+                        <img src="images/sleeve_striped_tshirt.png" alt="">
+                        <div class="clothes-name">Sleeve Striped T-shirt</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/half_star.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>4.5/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>4.5/5</p>
+                        <div class="prices">
+                            <div class="clothes-price">$130</div>
+                            <div class="old-price">$160</div>
+                            <div class="discount">-30%</div>
                         </div>
-                    </div>
-                    <div class="prices">
-                        <div class="clothes-price">$130</div>
-                        <div class="old-price">$160</div>
-                        <div class="discount">-30%</div>
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="view-all-parent">
             <div class="view-all"><button>View All</button></div>
         </div>
@@ -351,65 +352,72 @@
                     <div class="subscribe-button"><button>Subscribe to Newsletter</button></div>
                 </div>
             </div>
-            <div class="footer-first-box">
-                <div class="footer-title-box">
-                    <div class="footer-title">SHOP.CO</div>
-                    <div class="footer-subtitle">We have clothes that suits your style and which you're proud to wear. From women to men.</div>
-                    <div class="socials"><img src="images/socials.svg" alt=""></div>
-                </div>
-                <div class="footer-company-box">
-                    <div class="company-title">COMPANY</div>
-                    <div class="company-links">
-                        <a href="#about">About</a>
-                        <a href="#features">Features</a>
-                        <a href="#works">Works</a>
-                        <a href="#career">Career</a>
+            <div class="first-second-box">
+                <div class="footer-first-box">
+                    <div class="footer-title-box">
+                        <div class="footer-title">SHOP.CO</div>
+                        <div class="footer-subtitle">We have clothes that suits your style and which you're proud to wear. From women to men.</div>
+                        <div class="socials"><img src="images/socials.svg" alt=""></div>
+                    </div>
+                    <div class="all-link-boxes">
+                        <div class="company-help-boxes">
+                            <div class="footer-company-box">
+                                <div class="company-title">COMPANY</div>
+                                <div class="company-links">
+                                    <a href="#about">About</a>
+                                    <a href="#features">Features</a>
+                                    <a href="#works">Works</a>
+                                    <a href="#career">Career</a>
+                                </div>
+                            </div>
+
+                            <div class="footer-help-box">
+                                <div class="company-title">Help</div>
+                                <div class="company-links">
+                                    <a href="#customers-support">Customer Support</a>
+                                    <a href="#delivery-details">Delivery Details</a>
+                                    <a href="#terms-and-conditions">Terms & Conditions</a>
+                                    <a href="#privacy-policy">Privacy Policy</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="faq-resources-boxes">
+                            <div class="footer-faq-box">
+                                <div class="company-title">FAQ</div>
+                                <div class="company-links">
+                                    <a href="#account">Account</a>
+                                    <a href="#manage-deliveries">Manage Deliveries</a>
+                                    <a href="#orders">Orders</a>
+                                    <a href="#payments">Payments</a>
+                                </div>
+                            </div>
+
+                            <div class="footer-resources-box">
+                                <div class="company-title">Resources</div>
+                                <div class="company-links">
+                                    <a href="#free-eBooks">Free eBooks</a>
+                                    <a href="#development-tutorials">Development Tutorial</a>
+                                    <a href="#how-to-blog">How to - Blog</a>
+                                    <a href="#youtube-playlist">Youtube Playlist</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="footer-help-box">
-                    <div class="company-title">Help</div>
-                    <div class="company-links">
-                        <a href="#customers-support">Customer Support</a>
-                        <a href="#delivery-details">Delivery Details</a>
-                        <a href="#terms-and-conditions">Terms & Conditions</a>
-                        <a href="#privacy-policy">Privacy Policy</a>
-                    </div>
-                </div>
+                <div class="line3-div"></div>
 
-                <div class="footer-faq-box">
-                    <div class="company-title">FAQ</div>
-                    <div class="company-links">
-                        <a href="#account">Account</a>
-                        <a href="#manage-deliveries">Manage Deliveries</a>
-                        <a href="#orders">Orders</a>
-                        <a href="#payments">Payments</a>
-                    </div>
-                </div>
+                <div class="footer-second-box">
 
-                <div class="footer-resources-box">
-                    <div class="company-title">Resources</div>
-                    <div class="company-links">
-                        <a href="#free-eBooks">Free eBooks</a>
-                        <a href="#development-tutorials">Development Tutorial</a>
-                        <a href="#how-to-blog">How to - Blog</a>
-                        <a href="#youtube-playlist">Youtube Playlist</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="line3-div"></div>
-
-            <div class="footer-second-box">
-
-                <div class="footer-rights">
-                    <div class="rights-text">Shop.co © 2000-2023, All Rights Reserved</div>
-                    <div class="payments-box">
-                        <img src="images/visa.svg" alt="">
-                        <img src="images/mastercard.svg" alt="">
-                        <img src="images/paypal.svg" alt="">
-                        <img src="images/applepay.svg" alt="">
-                        <img src="images/googlepay.svg" alt="">
+                    <div class="footer-rights">
+                        <div class="rights-text">Shop.co © 2000-2023, All Rights Reserved</div>
+                        <div class="payments-box">
+                            <img src="images/visa.svg" alt="">
+                            <img src="images/mastercard.svg" alt="">
+                            <img src="images/paypal.svg" alt="">
+                            <img src="images/applepay.svg" alt="">
+                            <img src="images/googlepay.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
