responsive for desktops done | build test

--- a/index.html
+++ b/index.html
@@ -78,83 +78,92 @@
         <div class="scroll-wrapper">
             <div class="new-arrivals-box">
                 <div class="title-new-arrivals">NEW ARRIVALS</div>
+
                 <div class="new-arrivals">
                     <div class="clothes-box">
-                        <img src="images/t_shirt.png" alt="">
-                        <div class="clothes-name">T-shirt with Tape Details</div>
-                        <div class="raiting">
-                            <div class="stars">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/half_star.svg" alt="">
+                        <div class="t-shirt">
+                            <img src="images/t_shirt.png" alt="">
+                            <div class="clothes-name">T-shirt with Tape Details</div>
+                            <div class="raiting">
+                                <div class="stars">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/half_star.svg" alt="">
+                                </div>
+                                <div class="raiting-num">
+                                    <p>4.5/5</p>
+                                </div>
                             </div>
-                            <div class="raiting-num">
-                                <p>4.5/5</p>
-                            </div>
-                        </div>
-                        <div class="clothes-price">$120</div>
-                    </div>
-
-                    <div class="clothes-box">
-                        <img src="images/skiny_fit_jeans.png" alt="">
-                        <div class="clothes-name">Skinny Fit Jeans</div>
-                        <div class="raiting">
-                            <div class="stars">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/half_star.svg" alt="">
-                            </div>
-                            <div class="raiting-num">
-                                <p>3.5/5</p>
-                            </div>
-                        </div>
-                        <div class="prices">
-                            <div class="clothes-price">$240</div>
-                            <div class="old-price">$260</div>
-                            <div class="discount">-20%</div>
+                            <div class="clothes-price">$120</div>
                         </div>
                     </div>
 
                     <div class="clothes-box">
-                        <img src="images/checkered_shirt.png" alt="">
-                        <div class="clothes-name">Checkered Shirt</div>
-                        <div class="raiting">
-                            <div class="stars">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/half_star.svg" alt="">
+                        <div class="skiny_fit_jeans">
+                            <img src="images/skiny_fit_jeans.png" alt="">
+                            <div class="clothes-name">Skinny Fit Jeans</div>
+                            <div class="raiting">
+                                <div class="stars">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/half_star.svg" alt="">
+                                </div>
+                                <div class="raiting-num">
+                                    <p>3.5/5</p>
+                                </div>
                             </div>
-                            <div class="raiting-num">
-                                <p>4.5/5</p>
+                            <div class="prices">
+                                <div class="clothes-price">$240</div>
+                                <div class="old-price">$260</div>
+                                <div class="discount">-20%</div>
                             </div>
                         </div>
-                        <div class="clothes-price">$180</div>
                     </div>
 
                     <div class="clothes-box">
-                        <img src="images/sleeve_striped_tshirt.png" alt="">
-                        <div class="clothes-name">Sleeve Striped T-shirt</div>
-                        <div class="raiting">
-                            <div class="stars">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/Star_without_border.svg" alt="">
-                                <img src="images/half_star.svg" alt="">
+                        <div class="checkered_shirt">
+                            <img src="images/checkered_shirt.png" alt="">
+                            <div class="clothes-name">Checkered Shirt</div>
+                            <div class="raiting">
+                                <div class="stars">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/half_star.svg" alt="">
+                                </div>
+                                <div class="raiting-num">
+                                    <p>4.5/5</p>
+                                </div>
                             </div>
-                            <div class="raiting-num">
-                                <p>4.5/5</p>
-                            </div>
+                            <div class="clothes-price">$180</div>
                         </div>
-                        <div class="prices">
-                            <div class="clothes-price">$130</div>
-                            <div class="old-price">$160</div>
-                            <div class="discount">-30%</div>
+                    </div>
+
+                    <div class="clothes-box">
+                        <div class="sleeve-striped-tshirt">
+                            <img src="images/sleeve_striped_tshirt.png" alt="">
+                            <div class="clothes-name">Sleeve Striped T-shirt</div>
+                            <div class="raiting">
+                                <div class="stars">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/Star_without_border.svg" alt="">
+                                    <img src="images/half_star.svg" alt="">
+                                </div>
+                                <div class="raiting-num">
+                                    <p>4.5/5</p>
+                                </div>
+                            </div>
+                            <div class="prices">
+                                <div class="clothes-price">$130</div>
+                                <div class="old-price">$160</div>
+                                <div class="discount">-30%</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -173,79 +182,87 @@
             <div class="title-top-selling">TOP SELLING</div>
             <div class="top-selling">
                 <div class="clothes-box">
-                    <img src="images/vertical_stript_shirt.png" alt="">
-                    <div class="clothes-name">Vertical Striped Shirt</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
+                    <div class=vertical-stript-shirt>
+                        <img src="images/vertical_stript_shirt.png" alt="">
+                        <div class="clothes-name">Vertical Striped Shirt</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>5.0/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>5.0/5</p>
+                        <div class="prices">
+                            <div class="clothes-price">$212</div>
+                            <div class="old-price">$232</div>
+                            <div class="discount">-20%</div>
                         </div>
-                    </div>
-                    <div class="prices">
-                        <div class="clothes-price">$212</div>
-                        <div class="old-price">$232</div>
-                        <div class="discount">-20%</div>
                     </div>
                 </div>
 
                 <div class="clothes-box">
-                    <img src="images/courage_graphic_tshirt.png" alt="">
-                    <div class="clothes-name">Courage Graphic T-shirt</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
+                    <div class="courage_graphic_tshirt">
+                        <img src="images/courage_graphic_tshirt.png" alt="">
+                        <div class="clothes-name">Courage Graphic T-shirt</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>4.0/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>4.0/5</p>
+                        <div class="prices">
+                            <div class="clothes-price">$145</div>
                         </div>
-                    </div>
-                    <div class="prices">
-                        <div class="clothes-price">$145</div>
                     </div>
                 </div>
 
                 <div class="clothes-box">
-                    <img src="images/loose_fit_bermuda_shorts.png" alt="">
-                    <div class="clothes-name">Loose Fit Shorts</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
+                    <div class="loose_fit_bermuda_shorts">
+                        <img src="images/loose_fit_bermuda_shorts.png" alt="">
+                        <div class="clothes-name">Loose Fit Shorts</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>3.0/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>3.0/5</p>
-                        </div>
+                        <div class="clothes-price">$80</div>
                     </div>
-                    <div class="clothes-price">$80</div>
                 </div>
 
                 <div class="clothes-box">
-                    <img src="images/faded_skinny_jeans.png" alt="">
-                    <div class="clothes-name">Faded Skinny Jeans</div>
-                    <div class="raiting">
-                        <div class="stars">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/Star_without_border.svg" alt="">
-                            <img src="images/half_star.svg" alt="">
+                    <div class="faded_skinny_jeans">
+                        <img src="images/faded_skinny_jeans.png" alt="">
+                        <div class="clothes-name">Faded Skinny Jeans</div>
+                        <div class="raiting">
+                            <div class="stars">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/Star_without_border.svg" alt="">
+                                <img src="images/half_star.svg" alt="">
+                            </div>
+                            <div class="raiting-num">
+                                <p>4.5/5</p>
+                            </div>
                         </div>
-                        <div class="raiting-num">
-                            <p>4.5/5</p>
+                        <div class="prices">
+                            <div class="clothes-price">$210</div>
                         </div>
-                    </div>
-                    <div class="prices">
-                        <div class="clothes-price">$210</div>
                     </div>
                 </div>
             </div>
