1033-769px first phase

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             </div>
 
             <div class="revisions">
-                <div class="revision-box">
+                <div class="revision-first-box">
                     <div class="revision-inside-box">
                         <div class="stars">
                             <img src="images/Star_without_border.svg" alt="">
@@ -319,7 +319,7 @@
                         <div class="revision">"I'm blown away by the quality and style of the clothes I received from Shop.co. From casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</div>
                     </div>
                 </div>
-                <div class="revision-box">
+                <div class="revision-second-box">
                     <div class="revision-inside-box">
                         <div class="stars">
                             <img src="images/Star_without_border.svg" alt="">
@@ -336,7 +336,7 @@
                         <div class="revision">"Finding clothes that align with my personal style used to be a challenge until I discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and occasions.”</div>
                     </div>
                 </div>
-                <div class="revision-box">
+                <div class="revision-third-box">
                     <div class="revision-inside-box">
                         <div class="stars">
                             <img src="images/Star_without_border.svg" alt="">
