responsive 800-600px done | build test

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
+    <script defer src="js/scripts.js"></script>
 </head>
 <body>
     <header>
         <div class="header-box">
             <div class="logo">SHOP.CO</div>
-            <nav class="navigation">
+            <nav class="navigation" id="nav">
                 <ul>
                     <li><a href="#shop">Shop</a></li>
                     <li><a href="#on-sale">On Sale</a></li>
@@ -31,7 +32,7 @@
             <div class="icons">
             <a href="#shopping-cart"><i class="fa-solid fa-cart-shopping"></i></a>
             <a href="#user-account"><i class="fa-regular fa-circle-user" style="color: #000000;"></i></a>
-            </div>
+        </div>
     </header>
 
     <section class="hero-section">
