burger-bar 1060-600px + userAccount Page | build test

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <div class="header-box">
+            <div id="burger"></div>
             <div class="logo">SHOP.CO</div>
             <nav class="navigation" id="nav">
                 <ul>
@@ -25,13 +26,13 @@
             </nav>
 
             <div class="search-box">
-                <img src="images/Vector.png" alt="">
+                <img class="search-icon" src="images/Vector.png" alt="">
                 <input type="text" placeholder="Search for products...">
             </div>
 
             <div class="icons">
             <a href="#shopping-cart"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="#user-account"><i class="fa-regular fa-circle-user" style="color: #000000;"></i></a>
+            <a href="userAccount.html"><i class="fa-regular fa-circle-user" style="color: #000000;"></i></a>
         </div>
     </header>
 
@@ -441,6 +442,6 @@
             </div>
         </div>
     </section>
-    
+
 </body>
 </html>
