email validation begin | build test

--- a/userAccount.html
+++ b/userAccount.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/userAccountStyles.css">
     <script defer src="js/userAccountScripts.js"></script>
     <title>UserAccountTryPage</title>
@@ -14,6 +15,9 @@
 <body>
 
     <div class="container" id="container">
+        <div class="back-arrow" id="arrow">
+            <i class="fa-solid fa-arrow-left"></i>
+        </div>
         <div class="form-container sign-up">
             <form>
                 <h1>Create Account</h1>
@@ -24,9 +28,19 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email for registeration</span>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+
+                <input type="text" name="username" id="usernamefield" placeholder="Username"/>
+                <p class="error-text" id="error-username"></p>
+
+                <input type="email" id="email" name="emailfield" placeholder="Email" />
+                <p id="email-error"></p>
+
+                <input type="password" name="password" id="passwordfield" placeholder="Password"/>
+                <p class="error-text" id="error-password"></p>
+
+                <input type="password" name="password2" id="passwordfield2" placeholder="Repeat Password"/>
+                <p class="error-text" id="error-password2"></p>
+
                 <button>Sign Up</button>
             </form>
         </div>
@@ -40,8 +54,13 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+
+                <input type="email" id="email" name="emailfield" placeholder="Email" />
+                <p id="email-error"></p>
+
+                <input type="password" name="password" id="passwordfield" placeholder="Password"/>
+                <p class="error-text" id="error-password"></p>
+
                 <a href="#">Forget Your Password?</a>
                 <button>Sign In</button>
             </form>
